challenge 2 successfully submitted

--- a/views/index.html
+++ b/views/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/style.css">
+    <link rel="stylesheet" href="/public/style.css" type="text/css">
     <title>Request header parser</title>
 </head>
 <body>
     <h1>Request Header Parser API</h1>
     <p>
-        <a href="/api/whoami">Request Header Parser API </a>
+        <a href="/api/whoami/">Request Header Parser API </a>
     </p>
 </body>
 </html>
